--- a/voom-app/app/src/main/res/layout/fragment_registration_contact.xml
+++ b/voom-app/app/src/main/res/layout/fragment_registration_contact.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical"
-        android:paddingVertical="64dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,6 +82,27 @@
                     android:padding="8pt"
                     android:inputType="text"/>
             </com.google.android.material.textfield.TextInputLayout>
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/image_preview"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:paddingVertical="16dp"
+                android:contentDescription="@string/profile_image_preview" />
+            
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/upload_profile_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/upload_image"
+                app:cornerRadius="20dp"
+                app:strokeWidth="1dp"
+                app:strokeColor="@color/primary"
+                android:textColor="@color/primary"
+                app:backgroundTint="@android:color/transparent" />
 
             <LinearLayout
                 android:orientation="horizontal"
