--- a/voom-app/app/src/main/res/layout/item_ride.xml
+++ b/voom-app/app/src/main/res/layout/item_ride.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="2dp"
     android:orientation="vertical">
 
     <TextView
@@ -13,14 +13,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Date"
-        android:visibility="gone"
+        android:textSize="14sp"
         android:textStyle="bold"
-        android:textSize="14sp"/>
+        android:visibility="gone" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginVertical="16dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp">
@@ -92,41 +93,41 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="4dp"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tvPrice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:paddingTop="4dp"/>
+                    android:paddingTop="4dp"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tvStatus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:paddingTop="4dp"/>
+                    android:paddingTop="4dp"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tvPanic"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:paddingTop="4dp"/>
+                    android:paddingTop="4dp"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tvPassengers"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:paddingTop="4dp"/>
+                    android:paddingTop="4dp"
+                    android:textSize="14sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/passengerRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false"/>
+                    android:nestedScrollingEnabled="false" />
 
             </LinearLayout>
 
