feat: Implemented changing password.

--- a/voom-fe/src/app/shared/dialog/change-password-dialog/change-password-dialog.html
+++ b/voom-fe/src/app/shared/dialog/change-password-dialog/change-password-dialog.html
@@ -21,8 +21,11 @@
 
   <button
     type="button"
-    class="h-[56px] px-12 rounded-full text-base font-medium transition-colors bg-blue-950 text-white disabled:bg-gray-300 disabled:text-gray-500 disabled:cursor-not-allowed"
-    [disabled]="passwordForm.invalid"
+    class="h-[56px] px-12 rounded-full text-base font-medium transition-colors bg-blue-950 text-white cursor-pointer disabled:bg-gray-300 disabled:text-gray-500 disabled:cursor-not-allowed"
+    [disabled]="
+      passwordForm.invalid || passwordForm.value.password1 !== passwordForm.value.password2
+    "
+    (click)="onSave()"
   >
     Save
   </button>
