--- a/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
+++ b/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
@@ -24,10 +24,10 @@
       </div>
     </div>
 
-    <div>
+    <div class="mt-20 md:mt-0">
       <h4 class="text-xs font-semibold text-gray-500 tracking-widest mb-6">SECURITY</h4>
 
-      <div class="flex flex-col gap-6 mb-20">
+      <div class="flex flex-col gap-6 mb-10">
         <app-value-input-string label="Email" [formControl]="profileForm.controls.email"/>
 
         <button type="button" (click)="openChangePasswordDialog()"
