feat: Driver going to pickup location.

--- a/voom-fe/src/app/drivers/driver-home/driver-home.html
+++ b/voom-fe/src/app/drivers/driver-home/driver-home.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="p-8 space-y-8">
   <div class="rounded-3xl">
-    <app-map [focusedDriverId]="myId()"></app-map>
+    <app-map [focusedDriverId]="myId()" [points]="routePoints()"></app-map>
   </div>
   <div>
     <h1 class="text-xl text-primary font-medium">Summary</h1>
