--- a/voom-app/app/src/main/res/layout/dialog_change_password.xml
+++ b/voom-app/app/src/main/res/layout/dialog_change_password.xml
@@ -13,10 +13,10 @@
         android:text="@string/change_password"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginBottom="16dp"
-        />
+        android:layout_marginBottom="16dp" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/newPasswordLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="outline"
@@ -24,18 +24,19 @@
         app:boxCornerRadiusTopEnd="24dp"
         app:boxCornerRadiusBottomStart="24dp"
         app:boxCornerRadiusBottomEnd="24dp"
-        app:endIconMode="password_toggle">
+        app:endIconMode="password_toggle"
+        app:helperText="At least 8 characters, 1 uppercase letter and 1 number">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_new_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/new_password"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/confirmPasswordLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -51,8 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirm_password"
-            android:inputType="textPassword"
-            />
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -61,5 +61,6 @@
         android:layout_height="wrap_content"
         android:text="@string/confirm"
         android:layout_marginTop="24dp"
-        app:cornerRadius="24dp"/>
+        app:cornerRadius="24dp"
+        android:enabled="false"/>
 </LinearLayout>
