--- a/voom-app/app/src/main/res/navigation/main_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/main_nav_graph.xml
@@ -31,6 +31,9 @@
             android:id="@+id/action_loginFragment_to_mainUserFragment"
             app:destination="@id/mainUserFragment" />
     </fragment>
+    <action
+        android:id="@+id/action_global_to_mainDriverFragment"
+        app:destination="@id/mainDriverFragment" />
     <fragment
         android:id="@+id/forgotPasswordFragment"
         android:name="inc.visor.voom.app.unauthenticated.password.ForgotPasswordFragment"
