--- a/voom-fe/src/app/authenticated/user/favorite-routes/favorite-routes-accordition/favorite-routes-accordition.html
+++ b/voom-fe/src/app/authenticated/user/favorite-routes/favorite-routes-accordition/favorite-routes-accordition.html
@@ -51,7 +51,7 @@
               <button
                 type="button"
                 class="rounded-full px-10 h-10 bg-blue-900 hover:bg-blue-800 text-white text-base font-medium transition-colors"
-                (click)="pickRoute()"
+                (click)="pickRoute(route)"
               >
                 Pick route
               </button>
