--- a/voom-fe/src/app/authenticated/user/favorite-routes/favorite-routes.html
+++ b/voom-fe/src/app/authenticated/user/favorite-routes/favorite-routes.html
@@ -13,7 +13,7 @@
 
   <div class="flex flex-col gap-6">
     @for (route of routes; track route.id) {
-      <app-favorite-route-accordion [route]="route"></app-favorite-route-accordion>
+      <app-favorite-route-accordion [route]="route" (deleted)="onRouteDeleted()"></app-favorite-route-accordion>
     }
   </div>
 </section>
