--- a/voom-fe/src/app/shared/footer/footer.html
+++ b/voom-fe/src/app/shared/footer/footer.html
@@ -4,25 +4,29 @@
       <div class="text-2xl font-bold italic">
         <img src="../../../assets/images/white-logo.png" class="text-color-white" />
       </div>
+      @if (isAuthenticated()) {
+        <div>
+        </div>
+      } @else {
+        <div>
+          <h4 class="text-sm font-semibold mb-4">ABOUT</h4>
+          <ul class="space-y-2 text-sm text-gray-200">
+            <li class="hover:underline cursor-pointer">Schedule a Ride</li>
+            <li class="hover:underline cursor-pointer">Vehicle Types</li>
+            <li class="hover:underline cursor-pointer">Mobile App</li>
+          </ul>
+        </div>
 
-      <div>
-        <h4 class="text-sm font-semibold mb-4">ABOUT</h4>
-        <ul class="space-y-2 text-sm text-gray-200">
-          <li class="hover:underline cursor-pointer">Schedule a Ride</li>
-          <li class="hover:underline cursor-pointer">Vehicle Types</li>
-          <li class="hover:underline cursor-pointer">Mobile App</li>
-        </ul>
-      </div>
+        <div>
+          <h4 class="text-sm font-semibold mb-4">USERS</h4>
+          <ul class="space-y-2 text-sm text-gray-200">
+            <li class="hover:underline cursor-pointer">Sign In</li>
+            <li class="hover:underline cursor-pointer">Sign Up</li>
+          </ul>
+        </div>
+      }
 
-      <div>
-        <h4 class="text-sm font-semibold mb-4">USERS</h4>
-        <ul class="space-y-2 text-sm text-gray-200">
-          <li class="hover:underline cursor-pointer">Sign In</li>
-          <li class="hover:underline cursor-pointer">Sign Up</li>
-        </ul>
-      </div>
     </div>
-
     <div class="mt-10 pt-6 text-center text-sm text-gray-300">Copyright © 2025 Visor Inc</div>
   </div>
 </footer>
