--- a/voom-fe/src/app/main-shell/user-pages/ride-tracking/ride-tracking.html
+++ b/voom-fe/src/app/main-shell/user-pages/ride-tracking/ride-tracking.html
@@ -2,3 +2,93 @@
 <div class="p-8 rounded-3xl">
   <app-map/>
 </div>
+
+<div class="max-w-[1200px] ml-auto mr-auto flex flex-col items-center gap-4 p-4">
+    <div>
+        <p class="text-center text-xl">Estimated time of arrival: 15 minutes</p>
+    </div>
+        <p class="text-center text-gray-600">In case of emergency, press the PANIC button to alert authorities.</p>
+
+    <button
+  class="
+    bg-red-600
+    hover:bg-red-700
+    text-white
+    rounded-full
+    px-4
+    py-2
+    inline-flex
+    items-center
+    w-auto
+    cursor-pointer
+    mb-10
+  "
+>
+  PANIC
+</button>
+
+<div>
+    <div class="text-center text-gray-600">
+        @if(reported) {
+            Thank you for your report. We will look into the matter.
+        } 
+        @else {
+        If driver is driving unadequately you can report him <span class="text-blue-500 cursor-pointer" (click)="toggleReport()">here.</span>
+        }
+    </div>
+</div>
+
+<div class="w-[50%] mx-auto p-6 space-y-4">
+
+    @if(showReport) {
+        <div class="relative">
+    <label
+      class=" px-2 text-sm text-blue-800 mb-4"
+    >
+      Message
+    </label>
+
+    <textarea
+    rows="4"
+    placeholder="Enter your report message..."
+    class="
+      w-full
+      resize-none
+      rounded-2xl
+      border-2
+      border-blue-800
+      px-4
+      py-2
+      text-sm
+      text-gray-700
+      outline-none
+      focus:ring-0
+      focus:border-blue-900
+      mt-3
+    "
+    [(ngModel)]="message"
+  ></textarea>
+  </div>
+
+  <div class="flex justify-center gap-6 pt-2">
+    <button
+      type="button"
+      class="rounded-full bg-red-700 px-6 py-2 text-white font-medium hover:bg-red-800 transition cursor-pointer"
+    >
+      Cancel Ride
+    </button>
+
+    <button
+      type="button"
+      class="rounded-full bg-blue-900 px-6 py-2 text-white font-medium hover:bg-blue-950 transition cursor-pointer"
+      (click)="report()"
+    >
+      Report
+    </button>
+  </div>
+    }
+  
+</div>
+
+
+</div>
