feat: add admin pages

--- a/voom-fe/src/custom-theme.scss
+++ b/voom-fe/src/custom-theme.scss
@@ -139,9 +139,16 @@ app-ride-history-table {
   )
 );
 
+
 @include mat.sidenav-overrides(
-  (
-    container-background-color: $primary,
-    content-text-color: white,
-  )
+    (
+      container-divider-color: $primary,
+      container-text-color: $primary,
+      container-shape: 0px,
+      container-width: 196px,
+    )
 );
+
+@include mat.card-overrides((
+  outlined-outline-color: $primary,
+))
