--- a/voom-fe/src/app/main-shell/driver-pages/driver-home/driver-home.html
+++ b/voom-fe/src/app/main-shell/driver-pages/driver-home/driver-home.html
@@ -1,6 +1,6 @@
 <div class="p-8 space-y-8">
   <div class="rounded-3xl">
-<!--    <app-map [focusedDriverId]="myId()" [points]="routePoints()"></app-map>-->
+   <app-map [focusedDriverId]="myId()" [points]="routePoints()"></app-map>
   </div>
   <div>
     <h1 class="text-xl text-primary font-medium">Summary</h1>
