--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
@@ -1,48 +1,67 @@
 <mat-drawer-container class="w-full h-full">
-  <mat-drawer mode="side" opened class="pt-2">
-    <div class="p-2 space-y-2">
-      <div class="flex items-center pb-4">
-        <app-value-input-string [label]="'Search'"/>
-      </div>
-      <mat-card appearance="outlined" class="py-4 px-2 cursor-pointer outlined">
-        <div class="text-lg px-2">John Doe</div>
-      </mat-card>
-      <mat-card appearance="outlined" class="py-4 px-2 cursor-pointer outlined">
-        <div class="text-lg px-2">Jane Doe</div>
-      </mat-card>
+  <mat-drawer mode="side" opened class="pt-2 py-2">
+    <div class="p-2 space-y-2 overflow-y-auto overflow-x-hidden">
+      @if (users(); as users) {
+        <div class="flex items-center pb-4">
+          <app-value-input-string [label]="'Search'"/>
+        </div>
+        @for (user of users; track user) {
+          @if (user.id === selectedUser()?.id) {
+            <mat-card appearance="filled" class="py-4 px-2 cursor-pointer outlined" (click)="selectUser(user)">
+              <div class="flex justify-center items-center">
+                <div class="text-lg px-2 text-white">{{ user.firstName }}</div>
+                <div class="text-lg px-2 text-white">{{ user.lastName }}</div>
+              </div>
+            </mat-card>
+          } @else {
+            <mat-card appearance="outlined" class="py-4 px-2 cursor-pointer outlined" (click)="selectUser(user)">
+              <div class="flex justify-center items-center">
+                <div class="text-lg px-2">{{ user.firstName }}</div>
+                <div class="text-lg px-2">{{ user.lastName }}</div>
+              </div>
+            </mat-card>
+          }
+        }
+      } @else {
+        <div class="text-center text-xl">No users found yet</div>
+      }
     </div>
   </mat-drawer>
   <mat-drawer-content class="flex flex-col space-y-4 p-8">
-    <mat-card appearance="outlined" class="">
-      <mat-card-title class="p-4">
-        <div class="flex justify-between items-center">
-          <div class="font-medium text-xl">General</div>
-          <mat-icon class="cursor-pointer" (click)="saveGeneralInfo()">save</mat-icon>
-        </div>
-      </mat-card-title>
-      <mat-divider/>
-      <mat-card-content>
-        <form [formGroup]="userGeneralForm" class="p-4 grid space-x-2 grid-rows-2 grid-cols-3 gap-y-4" >
-          <app-value-input-string [label]="'First name'" [hide]="false" formControlName="firstName"/>
-          <app-value-input-string [label]="'Last name'" [hide]="false" formControlName="lastName" />
-          <app-value-input-date [label]="'Date of birth'" formControlName="birthDate" />
-          <app-value-input-string [label]="'Phone number'" [hide]="false" formControlName="phoneNumber"/>
-          <app-value-input-string [label]="'Address'" [hide]="false" formControlName="address"/>
-          <app-value-input-string [label]="'Email'" [hide]="false" formControlName="email" />
-        </form>
-      </mat-card-content>
-    </mat-card>
-    <mat-card appearance="outlined" class="">
-      <mat-card-title class="p-4">
-        <div class="flex justify-between items-center">
-          <div class="font-medium text-xl">Routes</div>
-          <mat-icon class="cursor-pointer">save</mat-icon>
-        </div>
-      </mat-card-title>
-      <mat-divider/>
-      <mat-card-content>
+    @if (selectedUser(); as user) {
+      <mat-card appearance="outlined" class="">
+        <mat-card-title class="p-4">
+          <div class="flex justify-between items-center">
+            <div class="font-medium text-xl">General</div>
+            <mat-icon class="cursor-pointer" (click)="saveGeneralInfo()">save</mat-icon>
+          </div>
+        </mat-card-title>
+        <mat-divider/>
+        <mat-card-content>
+          <form [formGroup]="userGeneralForm" class="p-4 grid space-x-2 grid-rows-2 grid-cols-3 gap-y-4" >
+            <app-value-input-string [label]="'First name'" [hide]="false" formControlName="firstName"/>
+            <app-value-input-string [label]="'Last name'" [hide]="false" formControlName="lastName" />
+            <app-value-input-date [label]="'Date of birth'" formControlName="birthDate" />
+            <app-value-input-string [label]="'Phone number'" [hide]="false" formControlName="phoneNumber"/>
+            <app-value-input-string [label]="'Address'" [hide]="false" formControlName="address"/>
+            <app-value-input-string [label]="'Email'" [hide]="false" formControlName="email" />
+          </form>
+        </mat-card-content>
+      </mat-card>
+      <mat-card appearance="outlined" class="">
+        <mat-card-title class="p-4">
+          <div class="flex justify-between items-center">
+            <div class="font-medium text-xl">Vehicles</div>
+            <mat-icon class="cursor-pointer">save</mat-icon>
+          </div>
+        </mat-card-title>
+        <mat-divider/>
+        <mat-card-content>
 
-      </mat-card-content>
-    </mat-card>
+        </mat-card-content>
+      </mat-card>
+    } @else {
+      <div class="text-center text-xl">User not selected</div>
+    }
   </mat-drawer-content>
 </mat-drawer-container>
