--- a/voom-app/app/src/main/res/layout/fragment_create_driver.xml
+++ b/voom-app/app/src/main/res/layout/fragment_create_driver.xml
@@ -126,8 +126,12 @@
                 android:id="@+id/et_vehicle_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="none"/>
+                android:inputType="none"
+                android:minHeight="56dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp" />
         </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/RoundedOutlinedInput"
