feat: update user, remove driver and vehicle rating, update data initializer
Signed-off-by: Maksim Vasic <vasicmaksim4@gmail.com>

--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-drivers/admin-drivers.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-drivers/admin-drivers.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="w-full h-full">
   <mat-drawer mode="side" opened class="pt-2 py-2">
-    <div class="p-2 space-y-2 overflow-y-auto overflow-x-hidden">
+    <div class="p-2 space-y-2">
       @if (drivers(); as drivers) {
         <div class="flex items-center pb-4">
           <app-value-input-string [label]="'Search'"/>
