--- a/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
+++ b/voom-fe/src/app/main-shell/admin-pages/admin-home/admin-users/admin-users.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="w-full h-full">
   <mat-drawer mode="side" opened class="pt-2 py-2">
-    <div class="p-2 space-y-2 overflow-y-auto overflow-x-hidden">
+    <div class="p-2 space-y-2">
       @if (users(); as users) {
         <div class="flex items-center pb-4">
           <app-value-input-string [label]="'Search'"/>
@@ -46,18 +46,6 @@
             <app-value-input-string [label]="'Address'" [hide]="false" formControlName="address"/>
             <app-value-input-string [label]="'Email'" [hide]="false" formControlName="email" />
           </form>
-        </mat-card-content>
-      </mat-card>
-      <mat-card appearance="outlined" class="">
-        <mat-card-title class="p-4">
-          <div class="flex justify-between items-center">
-            <div class="font-medium text-xl">Vehicles</div>
-            <mat-icon class="cursor-pointer">save</mat-icon>
-          </div>
-        </mat-card-title>
-        <mat-divider/>
-        <mat-card-content>
-
         </mat-card-content>
       </mat-card>
     } @else {
